[package]
name = "face_reco"
version = "0.1.0"
authors = ["Jacson Junior <jacson.g.junior@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openpnp_capture = "0.1"
minifb = "0.19.1"

[build-dependencies]
bindgen = "0.53.3"